# Personal_Projects

C++_Games/UVO_Game/src/: bird.cpp  bird.h  cloud.cpp  cloud.h  main.cpp  map.cpp  map.h  obstacle.cpp  obstacle.h  plane.cpp  plane.h  stormCloud.cpp  stormCloud.h  ufo.cpp  ufo.h  utils.cpp  utils.h
C++_Games/UVO_Game/src/sfml/: sfml.cpp  sfml.h  sfmlimage.cpp  sfmlimage.h  sfmlmusic.cpp  sfmlmusic.h  sfmlsound.cpp  sfmlsound.h
C++_Projects/Web_Scrapping/: CMakeLists.txt  compile  listProxies.csv  prgm
C++_Projects/Web_Scrapping/src/: WebScrapping.cpp  WebScrapping.h  main.cpp  utils.cpp  utils.h
C++_Projects/networkScanner/: compile
C++_Projects/networkScanner/src/: ScanNetwork.h  UserNetwork.cpp  UserNetwork.h  main.cpp  utils.cpp  utils.h
Java_Projects/Chess_Game_With_IA/: Bishop.java  Chess.java  ComputPlayer.java  Deplacements.java  King.java  Knight.java  Main.java  Pawn.java  Piece.java  Position.java  Queen.java  README.md  Rook.java  Terminal.java
Qt_Projects/Network_Scanner_Interface/: CMakeLists.txt  DetailsUser.cpp  DetailsUser.h  DetailsUser.ui  Scan.cpp  Scan.h  Scan.ui  ScanNetwork.cpp  ScanNetwork.h  UserNetwork.cpp  UserNetwork.h  main.cpp  mainWindow.cpp  mainWindow.h  utils.cpp  utils.h
Qt_Projects/Secure_Browser/: CMakeLists.txt  WebScrapping.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  utils.cpp  utils.h
Web_Projects/Cloud_Server/: ajaxPage.php  ajaxPageModify.php  checkInscription.php  checkPage.php  dbConfig.php  getFile.php  home.php  index.php  inscription.php  listFiles.php  login.php  logout.php  uploadFile.php
Web_Projects/Cloud_Server/css/: 01_mobile.css  02_fonts.css  web.css
Web_Projects/Cloud_Server/js/: ajax.js  web.js
Web_Projects/Phone_Killer_Game/: accueil.php  addGame.php  attente.php  checkGame.php  checkInscription.php  checkLogin.php  dataAjax.php  dbConfig.php  deleteGame.php  game.php  index.php  inscription.php  inscriptionGame.php  inscriptionGamePrive.php  kill.php  logout.php  updateGame.php  updateStatut.php
Web_Projects/Phone_Killer_Game/css/: 01_mobile.css  web.css
Web_Projects/Phone_Killer_Game/db/: etu8.sql
Web_Projects/Phone_Killer_Game/js/: ajax.js  web.js
